--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = { version = "1.0.86", features = ["backtrace"] }
-eframe = { version = "0.28.1", default-features = false, features = ["default_fonts", "wgpu"] }
+eframe = { version = "0.28.1", default-features = false, features = [
+    "default_fonts",
+    "wgpu",
+    "persistence",
+] }
